[project]
name = "first-from-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chaisiv", email = "chaitanyabhogadi2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
]

[project.scripts]
first-from-local = "first_from_local:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
